# template-rp2350

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  usb_serial.rs
